# bulkmt

./: .deploy.sh  CMakeLists.txt  README.md
lib/: CMakeLists.txt  bulkmt.hpp  ifacemt.hpp  lib.hpp  utl.hpp
pkg/: CMakeLists.txt
src/: CMakeLists.txt  bulkmt.cpp
tst/: CMakeLists.txt  test_bulkmt.cpp
